--- a/index.html
+++ b/index.html
@@ -16,52 +16,52 @@
             <img class="profile__avatar" src="./images/Jacques-Yves_Cousteau.jpg" alt="Здесь должно быть изображение">
             <div class="profile__info">
                 <h1 class="profile__name">Жак-Ив Кусто</h1>
-                <button class="profile__edit-button"></button>
+                <button class="profile__edit-button" type="button"></button>
                 <p class="profile__text">Исследователь океана</p>
             </div> 
-            <button class="profile__add-button"></button>
+            <button class="profile__add-button" type="button"></button>
         </section>
         <section class="elements">
             <article class="element">
                 <img class="element__image" src="./images/Karachayevsk.jpg" alt="Здесь должно быть изображение">
                 <div class="element__info-box">
                     <h2 class="element__title">Карачаевск</h2>
-                    <button class="element__like-icon"></button>
+                    <button class="element__like-icon" type="button"></button>
                 </div>
             </article>
             <article class="element">
                 <img class="element__image" src="./images/Mount_Elbrus.jpg" alt="Здесь должно быть изображение">
                 <div class="element__info-box">
                     <h2 class="element__title">Гора Эльбрус</h2>
-                    <button class="element__like-icon"></button>
+                    <button class="element__like-icon" type="button"></button>
                 </div>
             </article>
             <article class="element">
                 <img class="element__image" src="./images/Dombay.jpg" alt="Здесь должно быть изображение">
                 <div class="element__info-box">
                     <h2 class="element__title">Домбай</h2>
-                    <button class="element__like-icon"></button>
+                    <button class="element__like-icon" type="button"></button>
                 </div>
             </article>
             <article class="element">
                 <img class="element__image" src="./images/Mount_Elbrus.jpg" alt="Здесь должно быть изображение">
                 <div class="element__info-box">
                     <h2 class="element__title">Гора Эльбрус</h2>
-                    <button class="element__like-icon"></button>
+                    <button class="element__like-icon" type="button"></button>
                 </div>
             </article>
             <article class="element">
                 <img class="element__image" src="./images/Dombay.jpg" alt="Здесь должно быть изображение">
                 <div class="element__info-box">
                     <h2 class="element__title">Домбай</h2>
-                    <button class="element__like-icon"></button>
+                    <button class="element__like-icon" type="button"></button>
                 </div>
             </article>
             <article class="element">
                 <img class="element__image" src="./images/Karachayevsk.jpg" alt="Здесь должно быть изображение">
                 <div class="element__info-box">
                     <h2 class="element__title">Карачаевск</h2>
-                    <button class="element__like-icon"></button>
+                    <button class="element__like-icon" type="button"></button>
                 </div>
             </article>
         </section>
@@ -71,11 +71,13 @@
     </footer>
     <div class="popup">
         <div class="popup__box">
-            <button class="popup__cancelling-button"></button>
+            <button class="popup__cancelling-button" type="button"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <form class="popup__form" name="edit-form">
-                <input class="popup__field" name="name-field" type="text" placeholder="Жак-Ив Кусто">
-                <input class="popup__field" name="text-field" type="text" placeholder="Исследователь океана">
+                <fieldset class="popup__fields">
+                    <input class="popup__field" name="name-field" type="text" placeholder="Жак-Ив Кусто">
+                    <input class="popup__field" name="text-field" type="text" placeholder="Исследователь океана">
+                </fieldset>
                 <button class="popup__submit-button" type="submit">Сохранить</button>
             </form>
         </div>
