--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="popup__box popup__size">
             <button class="popup__cancelling-button" type="button"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form class="popup__form" name="edit-form">
+            <form class="popup__form" id="edit-form" name="edit-form">
                 <fieldset class="popup__fields">
                     <label class="popup__name-field" for="profile-name-field">
                         <input class="popup__field" id="profile-name-field" name="name-field" type="text" placeholder="Жак-Ив Кусто">
@@ -58,7 +58,7 @@
         <div class="popup__box popup__size">
             <button class="popup__cancelling-button" type="button"></button>
             <h2 class="popup__title">Новое место</h2>
-            <form class="popup__form" name="edit-form">
+            <form class="popup__form" id="add-form" name="add-form">
                 <fieldset class="popup__fields">
                     <label class="popup__name-field" for="card-name-field">
                         <input class="popup__field" id="card-name-field" name="name-field" type="text" placeholder="Название">
