--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
 </head>
 <body class="page">
     <header class="header">
-        <img class="header__logo" alt="Здесь должно быть изображение" src="<%=require('./src/images/header_logo.svg')%>">
+        <img class="header__logo" alt="Здесь должно быть изображение" src="<%=require('../src/images/header_logo.svg')%>">
     </header>
     <main>
         <section class="profile">
-            <img class="profile__avatar" src="<%=require('./src/images/Jacques-Yves_Cousteau.jpg')%>" alt="Здесь должно быть изображение">
+            <img class="profile__avatar" src="<%=require('../src/images/Jacques-Yves_Cousteau.jpg')%>" alt="Здесь должно быть изображение">
             <div class="profile__info">
                 <h1 class="profile__name">Жак-Ив Кусто</h1>
                 <button class="profile__edit-button" type="button"></button>
@@ -85,4 +85,3 @@
     </div>
 </body>
 </html>
-
