--- a/src/index.html
+++ b/src/index.html
@@ -92,9 +92,9 @@
         <div class="popup__box popup__size">
             <button class="popup__cancelling-button" type="button"></button>
             <h2 class="popup__title">Редактировать аватар</h2>
-            <form class="popup__form" id="edit-form" name="edit-form" novalidate>
+            <form class="popup__form" id="avatar-form" name="avatar-form" novalidate>
                 <fieldset class="popup__fields">
-                    <label for="avatar-link-field">
+                    <label for="avatar-link-field" >
                         <input class="popup__field" id="avatar-link-field" name="link-field" type="url" placeholder="Ссылка на картинку" required>
                         <span class="avatar-link-field-error popup__field-error"></span>
                     </label>
