fix исправлена работа попапа редактирования профиля

--- a/src/index.html
+++ b/src/index.html
@@ -48,11 +48,11 @@
             <form class="popup__form" id="edit-form" name="edit-form" novalidate>
                 <fieldset class="popup__fields">
                     <label class="popup__name-field" for="profile-name-field">
-                        <input class="popup__field" id="profile-name-field" name="name-field" type="text" placeholder="Жак-Ив Кусто" minlength="2" maxlength="40" pattern="^[a-zA-Zа-яА-Я \-]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
+                        <input class="popup__field" id="profile-name-field" name="name" type="text" placeholder="Жак-Ив Кусто" minlength="2" maxlength="40" pattern="^[a-zA-Zа-яА-Я \-]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
                         <span class="profile-name-field-error popup__field-error"></span>
                     </label>
                     <label for="profile-text-field">
-                        <input class="popup__field" id="profile-text-field" name="text-field" type="text" placeholder="Исследователь океана" minlength="2" maxlength="200" pattern="^[a-zA-Zа-яА-Я \-]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
+                        <input class="popup__field" id="profile-text-field" name="text" type="text" placeholder="Исследователь океана" minlength="2" maxlength="200" pattern="^[a-zA-Zа-яА-Я \-]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" required>
                         <span class="profile-text-field-error popup__field-error"></span>
                     </label>
                     <button class="popup__submit popup__profile-button" type="submit">Сохранить</button>
